--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
+    "react-google-calendar-api": "^1.0.11",
+    "react-live-clock": "^4.0.5",
     "react-scripts": "3.4.1",
+    "react-time-picker": "^4.0.1",
     "reactstrap": "^8.5.1"
   },
   "scripts": {
